<resources>
    <string name="app_name">RetrofitRoomUserList</string>
    <string name="user_avatar">User Avatar</string>
    <string name="list_of_users">List of Users</string>
    <string name="add_a_user_button">Add A User Button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="add_user">Add User</string>
    <string name="email">Email</string>
    <string name="avatar_url">User Avatar</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">save</string>
    <string name="failed_to_delete_user">Failed to delete user</string>
    <string name="failed_to_update_user">Failed to update user</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="no_users_to_display">No users to display</string>
</resources>